--- a/pythonclubapp/templates/base.html
+++ b/pythonclubapp/templates/base.html
@@ -18,8 +18,8 @@
                 <a class="navbar-brand" href="{% url 'index' %}">Python Club</a>
                 </div>
                 <ul class="nav navbar-nav">
-                   
-               
+                    <li><a href="{% url 'meetings' %}">Meetings</a></li>
+
                 </ul>
                 </div>
                 </nav>
