--- a/pythonclubapp/templates/base.html
+++ b/pythonclubapp/templates/base.html
@@ -20,6 +20,8 @@
                 <ul class="nav navbar-nav">
                     <li><a href="{% url 'meetings' %}">Meetings</a></li>
                     <li><a href="{% url 'resources' %}">Resources</a></li>
+                    <li><a href="{% url 'login' %}">Login</a></li>
+                    <li><a href="{% url 'logout' %}">Logout</a></li>
 
                 </ul>
                 </div>
